# data

./: .gitignore  LICENSE  README.md  _utils.py  combine_libraries.py  convert_fendl.py  convert_jeff32.py  convert_jeff33.py  convert_lib80x.py  convert_mcnp70.py  convert_mcnp71.py  convert_nndc71.py  convert_tendl.py  convert_tendl_rand.py  cross_sections.xml  data_formatting_tools.py  database_tools.py  download_all.sh  extract_entire_lib.py  generate_cendl.py  generate_endf.py  generate_endf71.py  generate_endf80.py  generate_jeff33.py  generate_jendl.py  generate_serpent_chain.py  generate_wmp.py  make_compton.py  make_stopping_powers.py  make_test_data.py  pyproject.toml  sample_sandy.py  setup.cfg  setup.py  utils.py
.github/workflows/: test_package.yml  test_processing.yml  test_urls.yml
depletion/: add_branching_ratios.py  branching_ratios_pwr.json  branching_ratios_sfr.json  casl_chain.py  chain_casl_pwr.xml  chain_casl_sfr.xml  chain_endfb71_pwr.xml  chain_endfb71_sfr.xml  generate_endf71_chain.py  generate_endf71_chain_casl.py  generate_endf80_chain.py  generate_tendl_chain.py  reduce_chain.py  serpent_fissq.json
depletion/endfb71/: casl_chain.py  generate_endf71_chain.py  generate_endf71_chain_casl.py
depletion/endfb80/: chain_casl_pwr.xml  chain_casl_sfr.xml  generate_endf80_chain.py  generate_endf80_chain_casl.py
depletion/jeff33/: chain_casl_pwr.xml  chain_casl_sfr.xml  generate_jeff33_chain.py  generate_jeff33_chain_casl.py  nfy_to_endf.sh
nuclear-data-scripts/: convert_lib80x.py  convert_mcnp71.py  generate_cendl.py  generate_endf71.py  generate_jendl.py  utils.py
openmc_data/: __init__.py  combine_libraries.py  convert_fendl.py  convert_jeff32.py  convert_jeff33.py  convert_lib80x.py  convert_mcnp70.py  convert_mcnp71.py  convert_nndc71.py  convert_tendl.py  convert_tendl_rand.py  generate_cendl.py  generate_endf.py  generate_jeff33.py  generate_jendl.py  make_compton.py  make_stopping_powers.py  sample_sandy.py  urls.py  urls_h5.py  urls_xml.py  utils.py
openmc_data/convert/: convert_fendl.py  convert_jeff32.py  convert_jeff33.py  convert_mcnp70.py  convert_nndc71.py  convert_tendl.py
openmc_data/depletion/: add_branching_ratios.py  chain_casl_sfr.xml  chain_endf_vii.1.xml  chain_endf_viii.0.xml  generate_endf71_chain.py  generate_endf71_chain_casl.py  generate_endf_chain.py  generate_serpent_fissq.py  generate_tendl_chain.py  reduce_chain.py  tendl2021_nuclides.json
openmc_data/download/: download_nndc.py  download_nndc_chain.py
openmc_data/generate/: generate_cendl.py  generate_endf.py  generate_jeff33.py  generate_jendl.py
openmc_data/other/: convert_tendl_rand.py  make_compton.py
tests/: test_urls.py  tests_urls.py
