[metadata]
name = openmc_data
version = attr: openmc_data.__version__
author = The OpenMC Development Team
author_email = openmc@anl.gov
description = Collection of scripts for managing data for OpenMC 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openmc/openmc_data
license = MIT
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/openmc/openmc_data
    Tracker = https://github.com/openmc/openmc_data/issues

[options.entry_points]
console_scripts =
        # combine_libraries = openmc_data.combine_libraries
        convert_fendl = openmc_data.convert_fendl:main
        convert_tendl = openmc_data.convert_tendl:main
        # todo add other python s

[options]
packages = find:
python_requires= >=3.6
install_requires=
    numpy >= 1.21.1
    #todo add other packages

[options.extras_require]
tests = 
    pytest >= 5.4.3
    requests

[flake8]
per-file-ignores = __init__.py:F401
